# TemplateTelegramBot

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
alembic/postgresql/migrations/: env.py
alembic/postgresql/migrations/versions/: 2025_12_19_0356-b6232fdfe4fd_added_telegram_profile.py
dockerfiles/: Dockerfile.nats  Dockerfile.postgresql  Dockerfile.postgresql.migrations  Dockerfile.telegrambot
locales/en/: text.ftl
locales/ru/: text.ftl
src/: __init__.py
src/config/: configuration.py
src/config/nats/config/: server.conf
src/telegrambot/: main.py
src/telegrambot/dependency_injection/: __init__.py  build.py  configuration.py  connections.py  repository.py
src/telegrambot/infrastructure/: bootstrap.py  i18n_translator.py
src/telegrambot/infrastructure/repository/postgresql/: models.py
src/telegrambot/presentation/telegram/dialogs/: commands.py
src/telegrambot/presentation/telegram/dialogs/flow/default/: __init__.py  getters.py  handlers.py  states.py  windows.py
src/telegrambot/presentation/telegram/dialogs/widgets/: i18n.py
src/telegrambot/presentation/telegram/middlewares/: logging_middleware.py
