[project]
name = "templatetelegrambot"
version = "0.1.0"
description = "A production-ready template for building Telegram bots with Python, featuring modern development tools, pre-configured testing setup, and best practices for bot development."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiogram>=3.23.0",
    "aiogram-dialog>=2.4.0",
    "alembic>=1.17.2",
    "alembic-postgresql-enum>=1.8.0",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "fluentogram>=1.2.1",
    "kitstructlog>=0.1.2",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-p no:warnings"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
include = ["src/*"]
exclude = ["alembic/postgresql/migrations/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG",    # Unused function argument
    "ANN",    # Missing or incomplete type annotations (bundle of ANN0xx)
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D200",   # One-line docstring should fit on one line
    "D203",   # 1 blank line required before class docstring
    "D205",   # 1 blank line required between summary line and description
    "D211",   # No blank lines allowed before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "D400",   # First line should end with a period
    "D401",   # First line should be in imperative mood
    "D413",   # Missing blank line after last section
    "D415",   # First line should end with a period, question mark, or exclamation point
    "D417",   # Missing argument descriptions in the docstring
    "D419",   # Docstring is empty
    "COM812", # Trailing comma missing in Python 3.6+ compatible call
    "E501",   # Line too long
    "EM101",  # Exception must not use a string literal, use a variable
    "EM102",  # Exception must not use an f-string
    "RUF001", # Ambiguous unicode character in string
    "RUF002", # Ambiguous unicode character in docstring
    "RUF003", # Ambiguous unicode character in comment
    "RET505", # Unnecessary `else` after `return`
    "TC001",  # Move imports to top-level
    "TRY003", # Avoid long messages in `raise` / `except`
    "TRY300", # Consider using `with` for resource-allocating operations
    "TRY301", # Abstract `raise` within exception handler
    "PYI013", # Use `typing_extensions` for backports in stub files
    "PIE790", # Unnecessary `pass`
    "PLR0913",# Too many arguments in function definition
    "PT018",  # Assertion uses `pytest.raises` with a too broad exception
    "G004",   # Logging format string uses f-string or `%`-formatting
    "INP001", # File is part of an implicit namespace package
    "UP007",  # Use `X | Y` for type unions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "TID252", # Relative imports from parent modules in tests
    "PLR2004",# Magic value used in comparison
    "S101",   # Use of assert detected
    "SLF001", # Private member accessed
]
"examples/*" = [
    "T201",   # Print found
]
"alembic/*" = [
    "W291",   # Trailing whitespace
]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
